--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Yuan
 middle_name: Guo
 last_name: （郭源）
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Reach me via the platforms above or email.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
