--- a/_config.yml
+++ b/_config.yml
@@ -630,14 +630,15 @@ jekyll_get_json:
 
 jsonresume:
   - basics
-  - work
   - education
+  - skills
+  - work
+  - awards
+  - patents
   - publications
   - projects
   - volunteer
-  - awards
   - certificates
-  - skills
   - languages
   - interests
   - references
