--- a/_config.yml
+++ b/_config.yml
@@ -263,8 +263,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Guo]
+  first_name: [Yuan]
 
   style: apa
   locale: en
